// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveCommandConfigurationOptions basic 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "color": false,
  "configPath": [
    "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/demo.config.yml",
  ],
  "cwd": "<$WORKSPACE$>/packages/helper-commander",
  "date": false,
  "logLevel": "debug",
  "parasticConfigEntry": "@guanghechen/tool-demo",
  "parasticConfigPath": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json",
  "workspace": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2",
}
`;

exports[`resolveCommandConfigurationOptions basic 2`] = `
[
  [
    "[90m[[39mdebug[90m][39m cwd: <$WORKSPACE$>/packages/helper-commander
",
  ],
  [
    "[90m[[39mdebug[90m][39m workspace: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2
",
  ],
  [
    "[90m[[39mdebug[90m][39m configPath: [
  '<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/demo.config.yml',
]
",
  ],
  [
    "[90m[[39mdebug[90m][39m parasticConfigPath: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json
",
  ],
  [
    "[90m[[39mdebug[90m][39m parasticConfigEntry: @guanghechen/tool-demo
",
  ],
  [
    "[90m[[39mdebug[90m][39m logLevel: debug
",
  ],
]
`;

exports[`resolveCommandConfigurationOptions no sub-command 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "color": true,
  "configPath": [],
  "cwd": "<$WORKSPACE$>/packages/helper-commander",
  "date": false,
  "generate": {
    "date": true,
    "logLevel": "debug",
  },
  "init": {
    "color": true,
    "logLevel": "verbose",
  },
  "logLevel": "warn",
  "parasticConfigEntry": "@guanghechen/tool-demo",
  "parasticConfigPath": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json",
  "workspace": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2",
}
`;

exports[`resolveCommandConfigurationOptions no sub-command 2`] = `[]`;

exports[`resolveCommandConfigurationOptions with config 1`] = `
{
  "a": [
    1,
    2,
    3,
  ],
  "color": true,
  "configPath": [],
  "cwd": "<$WORKSPACE$>/packages/helper-commander",
  "date": true,
  "logLevel": "debug",
  "parasticConfigEntry": "@guanghechen/tool-demo",
  "parasticConfigPath": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json",
  "workspace": "<$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2",
}
`;

exports[`resolveCommandConfigurationOptions with config 2`] = `
[
  [
    "[90m[[39mdebug[90m][39m cwd: <$WORKSPACE$>/packages/helper-commander
",
  ],
  [
    "[90m[[39mdebug[90m][39m workspace: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2
",
  ],
  [
    "[90m[[39mdebug[90m][39m configPath: []
",
  ],
  [
    "[90m[[39mdebug[90m][39m parasticConfigPath: <$WORKSPACE$>/packages/helper-commander/__test__/fixtures/basic2/package.json
",
  ],
  [
    "[90m[[39mdebug[90m][39m parasticConfigEntry: @guanghechen/tool-demo
",
  ],
  [
    "[90m[[39mdebug[90m][39m logLevel: debug
",
  ],
]
`;
